# triplemateai

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  app.py  backend.py  main.py  pyproject.toml  requirements.txt  test.py
static/: script.js  style.css
templates/: index.html
tools/: flight_tool.py  tavily_tool.py
